[gd_scene load_steps=11 format=3 uid="uid://cce2ofdk2m3j5"]

[ext_resource type="Script" path="res://environment/main.gd" id="1_b1xqc"]
[ext_resource type="PackedScene" uid="uid://bposst2udwsnm" path="res://mob/Mob.tscn" id="2_8biir"]
[ext_resource type="Texture2D" uid="uid://csofvxgx2pp2a" path="res://environment/environmentModels/sandyFloor.jpg" id="3_die2f"]
[ext_resource type="PackedScene" uid="uid://drfp8737erqji" path="res://player/Player.tscn" id="4_7gklv"]
[ext_resource type="AudioStream" uid="uid://ctehd2aho6vjo" path="res://audio/bubbles.mp3" id="5_2urcn"]
[ext_resource type="PackedScene" uid="uid://dr31ll2h5qouk" path="res://environment/environmentModels/Amphitheater.dae" id="6_whn35"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_42cdm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bjg7y"]
albedo_texture = ExtResource("3_die2f")

[sub_resource type="CylinderMesh" id="CylinderMesh_u4oyr"]

[sub_resource type="Curve3D" id="Curve3D_cvafn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 25, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -25, 0, 0, 0, 0, 0, 0, 25, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_b1xqc")
mob_scene = ExtResource("2_8biir")

[node name="killCounter" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0
scale = Vector2(3, 3)

[node name="roundTimerDisplay" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
scale = Vector2(3, 3)
horizontal_alignment = 1

[node name="roundTimer" type="Timer" parent="."]

[node name="Ground" type="Node" parent="."]

[node name="GroundBody" type="StaticBody3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="Ground/GroundBody"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
shape = SubResource("CylinderShape3D_42cdm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground/GroundBody"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_bjg7y")
mesh = SubResource("CylinderMesh_u4oyr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 0, 0)

[node name="Player" parent="." instance=ExtResource("4_7gklv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Bubbles" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_2urcn")

[node name="damageTimer" type="Timer" parent="Player"]
wait_time = 0.5
one_shot = true

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.951056, -0.309017, 0, 0.309017, 0.951056, 0, -10, 30)
projection = 1
size = 26.662

[node name="mobSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("Curve3D_cvafn")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 25, 0, 0)

[node name="Amphitheater" parent="." instance=ExtResource("6_whn35")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, -5, 0)

[connection signal="timeout" from="roundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="Player/damageTimer" to="Player" method="_on_damage_timer_timeout"]
[connection signal="timeout" from="mobSpawnTimer" to="." method="_on_mob_timer_timeout"]
